findBugs improvements. nothing serious.